<resources>
    <string name="app_name">myStrath-TaskManager</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Signup">Create Account</string>
    <string name="donthaveaccount">Dont have an account? Sign up below</string>
    <string name="already">Already have an account?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="LoginSuccess">Login Successful! Welcome </string>
    <string name="enter_task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="from">From</string>
    <string name="submission_method">Submission Method</string>
    <string name="add_task">ADD TASK</string>
    <string name="to">Due Date:</string>
    <string name="date_picker">datePicker</string>
    <string name="hello_blank_fragment">hello</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
